--- a/home.css
+++ b/home.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Slackey&display=swap');
@@ -16,7 +15,7 @@ body{
 
 header{
     z-index: 1;
-    position: relative;
+    position: fixed;
     padding: 10px;
     display: flex;
     align-items: center;
@@ -74,85 +73,90 @@ header h1{
   .sidenav a {font-size: 18px;}
 }
 
-.navform{
+ion-icon{
+    padding-right: 20px;
+    color:white;
+}
+
+header button{
+    border: none;
+    cursor: pointer;
+    outline: none;
+    background-color: black;
+    box-shadow: none;
+}
+
+
+.sec1{
     width: 100%;
     height: 50vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 10vh;
+    background-image: url(/images/caixa-de-ovo-colorida.jpg);
 }
 
-form{
-    /*border: 1px solid rgb(201, 201, 201);
-    border-radius: 10px;*/
+.sec1 div{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    width: 50vw;
 }
 
-div{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-
-label{
-    font-size: 12pt;
-}
-
-input{
-    border: 1px solid black;
-    width: 25vw;
-    height: 5vh;
-    margin-bottom: 5vh;
-}
-
-#entrar{
-    border: none;
-    background-color: yellow;
-    font-size: 12pt;
-    width: 25vw;
-    height: 5vh;
-    margin-bottom: 5vh;
-}
-
-#entrar:hover{
+.sec1 h1{
     background-color: black;
+    font-family: 'Amatic SC', cursive;
+    font-size: 42pt;
     color: white;
+    margin-bottom: 25px;
 }
 
-#linkazul{
-    font-size: 12pt;
+.sec1 h2{
+    justify-content: center;
+    align-items: center;
+    font-size: 15pt;
+    color: white;
+    opacity: 95%;
 }
 
-@media screen and (max-width: 1024px){
-    form{
-        width: 65vw;
-    }
-    input{
-        width: 65vw;
-    }
+.sec2{
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.card{
+    width: 90vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.card img{
+    width: 20rem;
+}
+
+.btn-verprodutos{
+    padding: 5px;
+    color: gold;
+    text-decoration: none;
+}
+
+.card-a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: black;
 }
 
 @media screen and (max-width: 768px){
-    form{
-        width: 75vw;
-    }
-    input{
-        width: 75vw;
-    }
-}
-
-@media screen and (max-width: 425px){
-    form{
-        width: 85vw;
-    }
-    input{
-        width: 85vw;
+    .card img{
+        width: 75%;
     }
 }
