--- a/signup.css
+++ b/signup.css
@@ -25,7 +25,6 @@ header{
 
 header h1{
     font-family: 'Slackey', cursive;
-    padding-right: 20px;
     color: gold;
     font-size: 15pt;
 }
@@ -41,12 +40,6 @@ header a:hover{
 
 .navform{
     width: 100%;
-    height: 50vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-top: 10vh;
 }
 
 form{
@@ -96,10 +89,10 @@ input{
 }
 
 @media screen and (max-width: 1024px){
-    form{
+    input{
         width: 75vw;
     }
-    input{
+    #entrar{
         width: 75vw;
     }
 }
